#4 - Etcd bekötése